# Temp commit before branch change

--- a/src/basic/_theme-basic-maps.scss
+++ b/src/basic/_theme-basic-maps.scss
@@ -2,8 +2,8 @@
 // - Each map contains a token scope
 // - Maps are assigned with 'tokens' from the 'tokens' Scope
 
-@import "maps/base";
+@import "src/Themes/config/maps/basic/maps/base";
 @import "maps/legacy-colors";
 @import "maps/legacy-keys";
-@import "maps/keys";
-@import "maps/shadows";
+@import "src/Themes/config/maps/basic/maps/keys";
+@import "src/Themes/config/maps/basic/maps/shadows";
