--- a/src/config/maps/themes/basic/palette/_palette.scss
+++ b/src/config/maps/themes/basic/palette/_palette.scss
@@ -1,8 +1,8 @@
 // BASIC THEME COLOR MAP: This partial defines the basic theme's registration color map.
 // - Map include Registration color scope tokens.
-// - Map is collected into the $theme-basic-settings map and is interpolated into custom properties.
+// - Map is collected into the $config-basic-settings map and is interpolated into custom properties.
 
-$theme-basic-colors: (
+$theme-basic-palette: (
         color-highlight_blue: $color-highlight_blue,
         color-highlight_blue-rgb: $color-highlight_blue-rgb,
         color-basic_blue: $color-basic_blue,
