--- a/src/config/tokens/themes/basic/keys/_keys.scss
+++ b/src/config/tokens/themes/basic/keys/_keys.scss
@@ -42,7 +42,7 @@ $positive-color-selected: var(--color-success-highlight);
 $negative-color: var(--color-error);
 $negative-color-hover: var(--color-error-hover);
 $negative-color-selected: var(--color-error-highlight);
-$private-color: var(--color-private);
+$private-color: var(--color-bazooka);
 $shareable-color: var(--color-purple);
 
 // UI elements
