--- a/src/config/tokens/themes/basic/keys/legacy/_legacy-keys.scss
+++ b/src/config/tokens/themes/basic/keys/legacy/_legacy-keys.scss
@@ -16,7 +16,7 @@
 $color-public: var(--color-live_blue);
 $color-private: var(--color-bazooka);
 
-// # Not in Figma
+// # Not in Vibe UI definitions
 $primary-on-secondary-color: var(--color-basic_blue);
 $primary-hover-on-secondary-color: var(--color-dark_blue);
 $primary-selected-color-rgb: var(--color-highlight_blue-rgb);
