--- a/src/Themes/_basic-theme.scss
+++ b/src/Themes/_basic-theme.scss
@@ -3,14 +3,22 @@
 // - We also use the ":root" selector, so Basic theme can cascade to other themes.
 //   - This way when a custom property is not defined in another theme, its definition i inherited from the ":root"
 
-@import "basic/theme-basic-tokens";
-@import "basic/theme-basic-maps";
-@import "basic/theme-basic-settings";
 
 :root,
 .light-app-theme,
 .default-app-theme {
-  @include generate-custom-properties($theme-basic-settings);
+  @include generate-custom-properties($theme-basic-legacy-setting);
+
+  /*
+
+  LEGACY VALUES
+
+  These values are not within Vibe's UI definitions and are on a deprecation path.
+  Please stop using them and make efforts to replace theme with their Vibe corresponding keys.
+
+  */
+
+  @include generate-custom-properties($theme-basic-legacy-setting);
 }
 
 // Imported still hardcoded content colors
