--- a/src/_themes.scss
+++ b/src/_themes.scss
@@ -5,8 +5,10 @@
 //   - Black
 //   - Dark
 //   - Hacker
+// Loading order is important due to theme dependencies
 
 @import "Themes/basic-theme.scss";
-@import "Themes/dark-theme.scss";
-@import "Themes/black-theme.scss";
-@import "Themes/hacker-theme.scss";
+
+//@import "Themes/dark-theme.scss";
+//@import "Themes/black-theme.scss";
+//@import "Themes/hacker-theme.scss";
