--- a/src/config/tokens/themes/basic/palette/_palette.scss
+++ b/src/config/tokens/themes/basic/palette/_palette.scss
@@ -3,29 +3,33 @@
 // FIGMA REFERENCE: COLOR PRIMITIVES
 
 // Colors
+// - Brand
 $color-basic_blue: #0073ea;
 $color-dark_blue: #0060b9;
-$color-link_color: #1f76c2;
 $color-highlight_blue: #cce5ff;
+
+// - Semantics
+$color-basic_green: #258750;
+$color-dark_green: #007038;
+$color-pastel_green: #bbdbc9;
+
+$color-basic_red: #d83a52;
+$color-blood_red: #b63546;
+$color-pastel_red: #f4c3cb;
+
+$color-purple: #a25ddc; // content color duplication
+$color-bazooka: #f65f7c;
 
 // Natural
 $color-black: #000000;
 $color-snow_white: #ffffff;
+
 // Natural / Gray
 $color-ui_grey: #dcdfec;
 $color-wolf_gray: #c3c6d4;
 $color-mud_black: #323338;
 $color-riverstone_gray: #f6f7fb;
 
+// Text
 $color-asphalt: #676879;
-
-// Semantics , should have registration colors
-// - Success, used as positive key alias
-$color-success: #258750;
-$color-success-hover: #007038;
-$color-success-highlight: #bbdbc9;
-
-// - Error, used as negative key alias
-$color-error: #d83a52;
-$color-error-hover: #b63546;
-$color-error-highlight: #f4c3cb;
+$color-link_color: #1f76c2;
