Change Tokens Architecture: Separated config from definitions: restructure core - Add Core layer separation between config and definitions.

--- a/src/_config.scss
+++ b/src/_config.scss
@@ -1,2 +1,10 @@
-@import "config/config-tokens";
-@import "config/config-maps";
+// CONFIG : MAIN LOADER
+// This partial loads all project's related tokens and maps
+// - Loading order is important.
+
+// Tokens
+@import "config/tokens/config-core-tokens";
+
+// Maps
+@import "config/maps/config-core-maps";
+
