Change Tokens Architecture: Basic Theme - Add Basic layer separation between config and definitions. - Create Config Maps setup - Create Config Tokens setup - Create Basic Theme settings. - Validate values using local test.

--- a/src/_config.scss
+++ b/src/_config.scss
@@ -4,7 +4,8 @@
 
 // Tokens
 @import "config/tokens/config-core-tokens";
+@import "config/tokens/config-basic-theme-tokens";
 
 // Maps
 @import "config/maps/config-core-maps";
-
+@import "config/maps/config-basic-theme-maps";
