--- a/src/config/tokens/themes/basic/keys/legacy/_legacy-keys.scss
+++ b/src/config/tokens/themes/basic/keys/legacy/_legacy-keys.scss
@@ -50,3 +50,6 @@ $disabled-text-on-secondary-color: $disabled-text-color;
 // borders
 $ui-border-on-secondary-color: var(--color-wolf_gray);
 $layout-border-on-secondary-color: $layout-border-color;
+
+// legacy shadow
+$box-shadow-mediun: var(--box-shadow-medium);
