--- a/src/config/maps/themes/basic/keys/legacy/_legacy-keys.scss
+++ b/src/config/maps/themes/basic/keys/legacy/_legacy-keys.scss
@@ -31,4 +31,5 @@ $theme-basic-legacy-keys: (
         dark-background-color: $dark-background-color,
         dark-background-on-secondary-color: $dark-background-on-secondary-color,
         dialog-background-color: $dialog-background-color,
+        box-shadow-mediun: $box-shadow-mediun,
 );
