Change Tokens Architecture: Dark Theme - Add Dark layer separation between config and definitions. - Create Config Maps setup - Create Config Tokens setup - Create Dark Theme settings.

--- a/src/config/maps/themes/basic/keys/_keys.scss
+++ b/src/config/maps/themes/basic/keys/_keys.scss
@@ -35,7 +35,7 @@ $theme-basic-keys: (
         layout-border-color: $layout-border-color,
 );
 
-// ## BASIC THEME SHADOW MAP: This partial defines the basic theme's shadow color map.
+// ## BASIC THEME SHADOW MAP: basic theme's shadow color map.
 // - Map include shadow scope tokens.
 // - Map is collected into the $theme-basic-settings map and is interpolated into custom properties.
 
