--- a/src/Themes/_dark-theme.scss
+++ b/src/Themes/_dark-theme.scss
@@ -2,15 +2,23 @@
 // - TODO: Dark Theme experience Guidelines should be shortly described here
 // - Properties are Theme Specific and goes under a Theme Specific Class based Selectors.
 
-@import "dark/theme-dark-tokens";
-@import "dark/theme-dark-maps";
-@import "dark/theme-dark-settings";
+@import "dark/dark-theme-settings";
+@import "dark/dark-theme-legacy-settings";
 
 .dark-app-theme {
-  @each $key, $value in $theme-dark-settings {
-    --#{$key}: #{$value};
-  }
+  @include generate-custom-properties($theme-dark-settings);
+
+  /*
+
+  LEGACY VALUES
+
+  These values are not within Vibe's UI definitions and are on a deprecation path.
+  Please stop using them and make efforts to replace theme with their Vibe corresponding keys.
+
+  */
+
+  @include generate-custom-properties($theme-dark-legacy-settings);
 }
 
 // Imported still hardcoded content colors
-@import "dark/theme-dark-content-colors";
+@import "dark/content-colors";
