--- a/src/_config.scss
+++ b/src/_config.scss
@@ -5,7 +5,9 @@
 // Tokens
 @import "config/tokens/config-core-tokens";
 @import "config/tokens/config-basic-theme-tokens";
+@import "config/tokens/config-dark-theme-tokens";
 
 // Maps
 @import "config/maps/config-core-maps";
 @import "config/maps/config-basic-theme-maps";
+@import "config/maps/config-dark-theme-maps";
