--- a/src/config/tokens/_config-basic-theme-tokens.scss
+++ b/src/config/tokens/_config-basic-theme-tokens.scss
@@ -1,5 +1,5 @@
 // CONFIG: BASIC THEME TOKENS
-// This partial loads Core config tokens
+// This partial loads basic theme's config tokens
 
 @import "themes/basic/palette/palette";
 @import "themes/basic/palette/legacy/legacy-pallete";
