--- a/src/config/tokens/themes/basic/palette/_palette.scss
+++ b/src/config/tokens/themes/basic/palette/_palette.scss
@@ -29,7 +29,13 @@ $color-ui_grey: #dcdfec;
 $color-wolf_gray: #c3c6d4;
 $color-mud_black: #323338;
 $color-riverstone_gray: #f6f7fb;
+// - Muted
+$color-ui_grey-muted: #ecedf5;
+$color-asphalt-muted: #bdbec7;
 
 // Text
 $color-asphalt: #676879;
 $color-link_color: #1f76c2;
+
+// Surface
+$color-surface: #292f4c;
