--- a/src/index.scss
+++ b/src/index.scss
@@ -16,3 +16,7 @@
 @import "themes";
 @import "colors";
 @import "content-colors";
+
+@debug $color-forest_green;
+@debug $theme-dark-positive-color-selected;
+@debug map-get($theme-dark-keys, positive-color-selected);
