Validate values using local test and fix accordingly. - Clean up duplicates. - validate dark theme. - fix disabled secondary values.

--- a/src/config/tokens/themes/basic/keys/legacy/_legacy-keys.scss
+++ b/src/config/tokens/themes/basic/keys/legacy/_legacy-keys.scss
@@ -44,7 +44,7 @@ $placeholder-color-with-opacity: var(--color-asphalt-with-opacity);
 $placeholder-on-secondary-color: var(--color-asphalt);
 
 // States
-$disabled-background-on-secondary-color: var(--color-ui_grey);
+$disabled-background-on-secondary-color: $disabled-background-color;;
 $disabled-text-on-secondary-color: $disabled-text-color;
 
 // borders
