Change Tokens Architecture: Black Theme - Add Dark layer separation between config and definitions. - Create Config Maps setup - Create Config Tokens setup - Create Dark Theme settings. - Change content colors to mixins. - Move legacy definitions order down.

--- a/src/Themes/_basic-theme.scss
+++ b/src/Themes/_basic-theme.scss
@@ -5,11 +5,13 @@
 
 @import "basic/basic-theme-settings";
 @import "basic/basic-theme-legacy-settings";
+@import "basic/content-colors";
 
 :root,
 .light-app-theme,
 .default-app-theme {
   @include generate-custom-properties($theme-basic-settings);
+  @include define-theme-content-colors();
 
   /*
 
@@ -23,5 +25,3 @@
   @include generate-custom-properties($theme-basic-legacy-settings);
 }
 
-// Imported still hardcoded content colors
-@import "basic/content-colors";
