--- a/src/Themes/_dark-theme.scss
+++ b/src/Themes/_dark-theme.scss
@@ -4,9 +4,11 @@
 
 @import "dark/dark-theme-settings";
 @import "dark/dark-theme-legacy-settings";
+@import "dark/dark-theme-content-colors";
 
 .dark-app-theme {
   @include generate-custom-properties($theme-dark-settings);
+  @include define-dark-theme-content-colors();
 
   /*
 
@@ -20,5 +22,3 @@
   @include generate-custom-properties($theme-dark-legacy-settings);
 }
 
-// Imported still hardcoded content colors
-@import "dark/content-colors";
