--- a/src/config/tokens/themes/dark/keys/legacy/_dark-theme-legacy-keys.scss
+++ b/src/config/tokens/themes/dark/keys/legacy/_dark-theme-legacy-keys.scss
@@ -28,7 +28,7 @@ $theme-dark-secondary-text-on-secondary-color: var(--color-jaco_gray);
 $theme-dark-link-on-secondary-color: $color-arctic_blue;
 
 $theme-dark-modal-background-color: $color-midnight;
-$theme-dark-dark-background-color: $color-carbon_blue;
+$theme-dark-dark-background-color: $color-carbon_blue; // todo: fix, not part of Vibe colors
 $theme-dark-dark-background-on-secondary-color: $color-silver;
 $theme-dark-dialog-background-color: $color-graphite;
 
