--- a/src/config/tokens/themes/dark/palette/_dark-theme-palette.scss
+++ b/src/config/tokens/themes/dark/palette/_dark-theme-palette.scss
@@ -30,5 +30,10 @@ $color-arctic_blue: #69a7ef;
 $color-rift: #090B19;
 
 // temp alias
-$color-buster_blue: #404b69; // todo: fix, not part of Vibe colors
-$color-carbon_blue: #393b53; // todo: fix, not part of Vibe colors
+// - todo: fix, not part of Vibe colors, used for:
+// -- var(--label-background-color)
+// -- var(--label-background-on-secondary-color)
+$color-buster_blue: #404b69;
+// - todo: fix, not part of Vibe colors, used for:
+// -- var(--dark-background-color)
+$color-carbon_blue: #393b53;
