--- a/src/config/maps/themes/basic/palette/legacy/_legacy-pallete.scss
+++ b/src/config/maps/themes/basic/palette/legacy/_legacy-pallete.scss
@@ -36,6 +36,8 @@ $theme-basic-legacy-palette: (
         color-dark-purple: $color-dark-purple,
         color-blue_links: $color-blue_links,
         color-blue-links: $color-blue-links-alias,
+        color-private: $color-private,
+        color-public: $color-public,
         color-board_views_grey: $color-board_views_grey,
         color-board_views_grey_hover: $color-board_views_grey_hover,
         color-board_views_blue: $color-board_views_blue,
