--- a/src/config/tokens/themes/dark/keys/legacy/_dark-theme-legacy-keys.scss
+++ b/src/config/tokens/themes/dark/keys/legacy/_dark-theme-legacy-keys.scss
@@ -1,5 +1,5 @@
 //  DARK THEME TOKENS: LEGACY KEYS
-// - This partial defines Basic Theme's legacy keys tokens
+// - This partial defines Dark Theme's legacy keys tokens
 // - Legacy keys are colors that are not part of the theme's keys
 // - Legacy keys are currently presented as custom properties
 // - Due to separation between Registration and Semantic candidates sort order between group is important
@@ -14,8 +14,8 @@
 // - This way we eliminate duplication for hard coded value declaration.
 
 // # Not in Vibe UI definitions
-$theme-dark-primary-on-secondary-color: var(--color-basic_blue);
-$theme-dark-primary-hover-on-secondary-color: var(--color-dark_blue);
+$theme-dark-primary-on-secondary-color: $color-basic_blue;
+$theme-dark-primary-hover-on-secondary-color: $color-dark_blue;
 $theme-dark-primary-selected-color-rgb: extract-rgb($color-ocean_blue);
 $theme-dark-primary-selected-on-secondary-color: $color-ocean_blue;
 $theme-dark-primary-text-on-secondary-color: $color-snow;
@@ -24,7 +24,7 @@ $theme-dark-primary-background-color-rgb: extract-rgb($color-midnight);
 $theme-dark-primary-background-hover-on-secondary-color: $color-silver;
 $theme-dark-secondary-background-color-rgb: extract-rgb($color-graphite);
 
-$theme-dark-secondary-text-on-secondary-color: var(--color-jaco_gray);
+$theme-dark-secondary-text-on-secondary-color: $color-jaco_gray;
 $theme-dark-link-on-secondary-color: $color-arctic_blue;
 
 $theme-dark-modal-background-color: $color-midnight;
@@ -35,9 +35,9 @@ $theme-dark-dialog-background-color: $color-graphite;
 $theme-dark-label-background-color: $color-buster_blue; // todo: fix, not part of Vibe colors
 $theme-dark-label-background-on-secondary-color: $color-buster_blue; // todo: fix, not part of Vibe colors
 
-$theme-dark-icon-on-secondary-color: var(--color-wolf_gray);; // todo: fix, theme basic natural color
+$theme-dark-icon-on-secondary-color: $color-wolf_gray;; // todo: fix, theme basic natural color
 $theme-dark-placeholder-color-with-opacity: $color-wolf_gray-with-opacity; // todo: fix, theme basic natural color
-$theme-dark-placeholder-on-secondary-color: var(--color-wolf_gray);; // todo: fix, theme basic natural color
+$theme-dark-placeholder-on-secondary-color: $color-wolf_gray; // todo: fix, theme basic natural color
 
 // States
 $theme-dark-ui-border-on-secondary-color: $color-fog;
